--- a/src/main/resources/templates/promotion/create.html
+++ b/src/main/resources/templates/promotion/create.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-md-8 mx-auto rounded border p-4 m-4">
             <h2 class="text-center mb-5">New Promotion</h2>
-            <form method="post" th:action="@{/promotions/save}" th:object="${promotion}" enctype="multipart/form-data">
+            <form method="post" th:action="@{/promotions/save}" th:object="${promotion}" enctype="multipart/form-data" onsubmit="return validateDates(event)">
                 <input type="hidden" th:field="*{id}" />
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label">Title</label>
@@ -62,6 +62,29 @@
         </div>
     </div>
 </div>
+
+
+<script>
+    function validateDates(event) {
+        const startTime = document.querySelector('input[name="startTime"]').value;
+        const endTime = document.querySelector('input[name="endTime"]').value;
+        const now = new Date().toISOString().slice(0, 16);
+
+        if (startTime < now || endTime < now) {
+            alert("Start Time and End Time cannot be in the past.");
+            event.preventDefault();
+            return false;
+        }
+
+        if (startTime >= endTime) {
+            alert("End Time must be after Start Time.");
+            event.preventDefault();
+            return false;
+        }
+
+        return true;
+    }
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
