--- a/src/main/resources/templates/promotion/delete.html
+++ b/src/main/resources/templates/promotion/delete.html
@@ -22,7 +22,9 @@
 
                     <div class="row mb-3">
                         <div class="offset-sm-4 col-sm-4 d-grid">
-                            <a th:href="@{'/promotions/delete/' + ${promotion.id}}" class="btn btn-danger">Delete</a>
+                            <form th:action="@{'/promotions/delete/' + ${promotion.id}}" method="post">
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
                         </div>
                     </div>
 
@@ -37,6 +39,7 @@
         </div>
     </div>
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
