--- a/src/main/resources/templates/promotion/home.html
+++ b/src/main/resources/templates/promotion/home.html
@@ -1,52 +1,59 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="/layout :: head">
-    <title></title>
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Best Shop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<h3>PROMOTION</h3>
+<div class="container">
+    <h1 class="text-center my-4">Promotions</h1>
 
+    <a class="btn btn-primary mb-3" href="/promotions/create">Create Promotion</a>
 
-<div class="notify">
-    <div th:if="${message}">
-        <span th:text="${message}"></span>
-    </div>
+    <table class="table table-striped" id="promotions">
+        <thead>
+        <tr>
+            <th>STT</th>
+            <th>Title</th>
+            <th>Start Time</th>
+            <th>End Time</th>
+            <th>Price</th>
+            <th>Detail</th>
+            <th>view</th>
+            <th>update</th>
+            <th>delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="promotion, status : ${promotion}">
+            <td th:text="${status.count}"></td>
+            <td th:text="${promotion.title}"></td>
+            <td th:text="${#temporals.format(promotion.startTime, 'yyyy-MM-dd HH:mm')}"></td>
+            <td th:text="${#temporals.format(promotion.endTime, 'yyyy-MM-dd HH:mm')}"></td>
+            <td th:text="${promotion.price}"></td>
+            <td th:text="${promotion.detail}"></td>
+            <td>
+                <a class="btn btn-info btn-sm" th:href="@{/promotions/view/{id}(id=${promotion.id})}">View</a>
+            </td>
+
+            <td>
+                <a class="btn btn-warning btn-sm" th:href="@{/promotions/update/{id}(id=${promotion.id})}">Edit</a>
+            </td>
+
+            <td>
+            <td>
+                <a class="btn btn-danger btn-sm" th:href="@{/promotions/delete/{id}(id=${promotion.getId()})}">delete</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
-<p>
-    <a th:href="@{/promotions/create}">
-        Add new customer
-    </a>
-</p>
-
-<table id = "promotions">
-    <thead>
-    <tr>
-        <th>STT</th>
-        <th>TITLE</th>
-        <th>START TIME</th>
-        <th>END TIME</th>
-        <th>PRICE</th>
-        <th>DETAIL</th>
-        <th>DELETE</th>
-        <th>VIEW</th>
-        <th>UPDATE</th>
-
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="t, pStatus : ${promotion}">
-        <td th:text="${pStatus.count}"></td>
-        <td th:text="${t.getTitle()}"></td>
-        <td th:text="${t.getStartTime()}"></td>
-        <td th:text="${t.getEndTime()}"></td>
-        <td th:text="${t.getPrice()}"></td>
-        <td th:text="${t.getDetail()}"></td>
-        <td><a class="no-underline" th:href="@{/promotions/delete/{id}(id=${t.getId()})}"><i class="fa-solid fa-trash"></i></a></td>
-        <td><a class="no-underline" th:href="@{/promotions/view/{id}(id=${t.getId()})}"><i class="fa-sharp fa-solid fa-eye"></i></a></td>
-        <td><a class="no-underline" th:href="@{/promotions/update/{id}(id=${t.getId()})}"><i class="fa-solid fa-pen-to-square"></i></a></td>
-    </tr>
-    </tbody>
-</table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
